[Serialization] Use decl mangling for local decls, not type mangling.

Otherwise we get an error with local generic types. We don't need the
complexity of type mangling anyway.

https://bugs.swift.org/browse/SR-5038